--- a/branch tier 2/store.html
+++ b/branch tier 2/store.html
@@ -220,6 +220,10 @@
 
       <!-- Nav Links -->
       <div class="nav-links-container">
+        <!-- Add this as the first item in nav-items -->
+<a class="nav-link px-2 py-1 rounded" href="../index.html">
+    <span class="nav-icon">🏠</span> Home
+</a>
         <a href="news.html" class="nav-link-item">
           <svg class="nav-link-icon w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
