--- a/branch/find-tutors.html
+++ b/branch/find-tutors.html
@@ -32,7 +32,7 @@
                         </svg>
                     </button>
 
-                    <a href="../index.html" class="logo-container text-2xl font-bold">
+                    <a href="find-tutors.html" class="logo-container text-2xl font-bold">
                         <div class="logo-text">
                             <span class="logo-main">Astegni</span>
                             <span class="logo-sub">find tutors</span>
@@ -58,6 +58,10 @@
                 <!-- Right Section: Navigation Links -->
                 <div class="nav-links hidden md:flex">
                     <div class="nav-items">
+                        <!-- Add this as the first item in nav-items -->
+                        <a class="nav-link px-2 py-1 rounded" href="../index.html">
+                            <span class="nav-icon">🏠</span> Home
+                        </a>
                         <a class="nav-link px-2 py-1 rounded" href="#" onclick="handleNavLinkClick(event, 'news')">
                             <span class="nav-icon">📰</span> News
                         </a>
@@ -1302,10 +1306,11 @@
     <script src="../js-tier-1/coming-soon-modal.js"></script>
     <script src="../js-tier-1/ad-modal.js"></script>
 </body>
-    counting animation
-    price should be 100-300 for academics and 300-500 for certifications.
-    search history filter
-    Near my location
-    training center should show coming soon
-    css and enhanced side bar.
+counting animation
+price should be 100-300 for academics and 300-500 for certifications.
+search history filter
+Near my location
+training center should show coming soon
+css and enhanced side bar.
+
 </html>
