--- a/my-profile-tier-1/Institute-profile.html
+++ b/my-profile-tier-1/Institute-profile.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yeneta - Institute Profile </title>
-    <link rel="stylesheet" href="../css/page-structure.css">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css-tier-1/page-structure.css">
+    <link rel="stylesheet" href="../css-tier-1/main.css">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         <div class="container nav-container">
             <button class="sidebar-toggle" onclick="toggleSidebar()">☰</button>
             <div class="nav-brand">
-                <a href="../index.html" class="logo-container">
+                <a href="institute-profile.html" class="logo-container">
                     <div class="logo-text">
                         <span class="logo-main">Astegni</span>
                         <span class="logo-sub">Home</span>
@@ -1833,10 +1833,10 @@
     </script>
 
     <script src="../js-tier-1/auth.js"></script>
-    <script src="../js/page-structure-1.js"></script>
-    <script src="../js/page-structure-2.js"></script>
-    <script src="../js/page-structure-3.js"></script>
-    <script src="../js/page-structure-4.js"></script>
+    <script src="../js-tier-1/page-structure-1.js"></script>
+    <script src="../js-tier-1/page-structure-2.js"></script>
+    <script src="../js-tier-1/page-structure-3.js"></script>
+    <script src="../js-tier-1/page-structure-4.js"></script>
     <!-- Additional helper functions that might be missing -->
 </body>
 
