--- a/my-profile-tier-1/advertiser-profile.html
+++ b/my-profile-tier-1/advertiser-profile.html
@@ -22,7 +22,7 @@
         <div class="container nav-container">
             <button class="sidebar-toggle" onclick="toggleSidebar()">☰</button>
             <div class="nav-brand">
-                <a href="../index.html" class="logo-container">
+                <a href="advertiser-profile.html" class="logo-container">
                     <div class="logo-text">
                         <span class="logo-main">Astegni</span>
                         <span class="logo-sub">Ad</span>
@@ -32,6 +32,10 @@
 
             </div>
             <div class="nav-menu">
+                <!-- Add this as the first item in nav-items -->
+                <a class="nav-link px-2 py-1 rounded" href="../index.html">
+                    <span class="nav-icon">🏠</span> Home
+                </a>
                 <a class="nav-link px-2 py-1 rounded" href="#" onclick="handleNavLinkClick(event, 'news')">
                     <span class="nav-icon">📰</span> News
                 </a>
