--- a/my-profile-tier-2/author-profile.html
+++ b/my-profile-tier-2/author-profile.html
@@ -235,7 +235,7 @@
         <div class="container nav-container">
             <button class="sidebar-toggle" onclick="toggleSidebar()">☰</button>
             <div class="nav-brand">
-                <a href="../index.html" class="logo-container">
+                <a href="author-profile.html" class="logo-container">
                     <div class="logo-text">
                         <span class="logo-main">Astegni</span>
                         <span class="logo-sub">Author</span>
