--- a/view-profile-tier-1/view-parent.html
+++ b/view-profile-tier-1/view-parent.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css-tier-1/view-parent.css">
     <link rel="stylesheet" href="../css-tier-1/auth-modal.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-<link rel="stylesheet" href="../css-tier-1/coming-soon-modal.css">
+    <link rel="stylesheet" href="../css-tier-1/coming-soon-modal.css">
     <link rel="stylesheet" href="../css-tier-1/ad-modal.css">
 </head>
 
@@ -20,7 +20,7 @@
         <div class="container nav-container">
             <button class="sidebar-toggle" onclick="toggleSidebar()">☰</button>
             <div class="nav-brand">
-                <a href="../index.html" class="logo-container">
+                <a href="view-parent.html" class="logo-container">
                     <div class="logo-text">
                         <span class="logo-main">Astegni</span>
                         <span class="logo-sub">View Parent</span>
@@ -29,7 +29,10 @@
                 </a>
 
             </div>
-            <div class="nav-menu">
+            <div class="nav-menu"><!-- Add this as the first item in nav-items -->
+                <a class="nav-link px-2 py-1 rounded" href="../index.html">
+                    <span class="nav-icon">🏠</span> Home
+                </a>
                 <a class="nav-link px-2 py-1 rounded" href="#" onclick="handleNavLinkClick(event, 'news')">
                     <span class="nav-icon">📰</span> News
                 </a>
@@ -952,7 +955,8 @@
             <!-- Right Sidebar - UNCHANGED -->
             <div class="right-sidebar">
                 <!-- News Widget -->
-                <div class="sidebar-widget news-widget" onclick="handleNavLinkClick(event, 'news')" style="cursor: pointer;">
+                <div class="sidebar-widget news-widget" onclick="handleNavLinkClick(event, 'news')"
+                    style="cursor: pointer;">
                     <div class="widget-header">
                         <h3>📰 Latest News</h3>
                         <a href="#" onclick="handleNavLinkClick(event, 'news')" class="widget-action">View All</a>
@@ -1589,7 +1593,7 @@
         </div>
     </div>
 
-<!-- Enhanced Auth Modal -->
+    <!-- Enhanced Auth Modal -->
     <div id="authRequiredModal" class="auth-modal-overlay">
         <div class="auth-modal-container">
             <div class="auth-modal-content">
@@ -1616,35 +1620,36 @@
         </div>
     </div>
 
-<!-- Coming Soon Modal -->
-<div id="coming-soon-modal" class="modal">
-    <div class="modal-content enhanced coming-soon-content">
-        <button class="modal-close-enhanced" onclick="closeModal('coming-soon-modal')">
-            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12">
-                </path>
-            </svg>
-        </button>
-        
-        <div class="coming-soon-header">
-            <div class="coming-soon-icon">
-                <svg class="w-16 h-16" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
-                        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z">
+    <!-- Coming Soon Modal -->
+    <div id="coming-soon-modal" class="modal">
+        <div class="modal-content enhanced coming-soon-content">
+            <button class="modal-close-enhanced" onclick="closeModal('coming-soon-modal')">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12">
                     </path>
                 </svg>
+            </button>
+
+            <div class="coming-soon-header">
+                <div class="coming-soon-icon">
+                    <svg class="w-16 h-16" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z">
+                        </path>
+                    </svg>
+                </div>
+                <h3 class="modal-title">Coming Soon!</h3>
+                <p class="modal-subtitle" id="coming-soon-message">We're working hard to bring you this feature. Stay
+                    tuned!</p>
             </div>
-            <h3 class="modal-title">Coming Soon!</h3>
-            <p class="modal-subtitle" id="coming-soon-message">We're working hard to bring you this feature. Stay tuned!</p>
+
+
+
         </div>
-
-        
-
     </div>
-</div>
 
 
-<!-- Ad Analytics Modal -->
+    <!-- Ad Analytics Modal -->
     <div class="modal" id="adAnalyticsModal">
         <div class="modal-overlay" onclick="closeAdAnalyticsModal()"></div>
         <div class="modal-content ad-analytics-modal">
@@ -2233,9 +2238,9 @@
     <script src="../js-tier-1/page-structure-1.js"></script>
     <script src="../js-tier-1/page-structure-2.js"></script>
     <script src="../js-tier-1/page-structure-3.js"></script>
-    <script src="../js-tier-1/page-structure-4.js"></script>   
-<script src="../js-tier-1/coming-soon-modal.js"></script>
-<script src="../js-tier-1/ad-modal.js"></script>
+    <script src="../js-tier-1/page-structure-4.js"></script>
+    <script src="../js-tier-1/coming-soon-modal.js"></script>
+    <script src="../js-tier-1/ad-modal.js"></script>
 </body>
 
 </html>
