Add cache-busting version parameters to JS files

--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
     <script src="js/root/default-avatar.js"></script>
     <script src="js/root/app.js"></script>
     <script src="js/root/auth.js?v=20251217"></script>
-    <script src="js/root/profile-system.js?v=20251123"></script>
+    <script src="js/root/profile-system.js?v=20251217"></script>
     <script src="js/root/theme-toggle.js"></script>
     <script src="js/root/nav.js"></script>
 
@@ -793,8 +793,8 @@
     <script src="modals/index/modal-loader.js"></script>
 
     <!-- Index Page Scripts -->
-    <script src="js/index.js"></script>
-    <script src="js/index/profile-and-authentication.js"></script>
+    <script src="js/index.js?v=20251217"></script>
+    <script src="js/index/profile-and-authentication.js?v=20251217"></script>
     <script src="js/index/init-index.js"></script>
     <script src="js/index/hero-section.js"></script>
     <script src="js/index/professional-review.js"></script>
@@ -802,13 +802,13 @@
     <script src="js/index/course-flip.js"></script>
     <script src="js/index/testimonials.js"></script>
     <script src="js/index/partner.js"></script>
-    <script src="js/index/news-section.js"></script>
+    <script src="js/index/news-section.js?v=20251217"></script>
     <script src="js/index/counter-anime.js"></script>
     <script src="js/index/review-stats-counter.js"></script>
     <script src="js/index/scroll-effect.js"></script>
     <script src="js/index/ripple-effect.js"></script>
     <script src="js/index/init-modals.js"></script>
-    <script src="js/index/data-loading.js"></script>
+    <script src="js/index/data-loading.js?v=20251217"></script>
     <script src="js/index/newsletter-subscription-footer.js"></script>
 
     <!-- Modal Scripts -->
