Fix config.js path in find-tutors.html and add cache-busting versions

--- a/branch/find-tutors.html
+++ b/branch/find-tutors.html
@@ -992,35 +992,35 @@
 
     <!-- Load core modules first (following four-tier architecture) -->
     <!-- Authentication Scripts -->
-    <script src="js/config.js"></script>
-    <script src="../js/root/auth.js"></script>
+    <script src="../js/config.js?v=20251217"></script>
+    <script src="../js/root/auth.js?v=20251217"></script>
     <!-- Common Modal Loader for add-role, logout, coming-soon modals -->
     <script src="../modals/common-modals/common-modal-loader.js"></script>
     <script src="../js/root/app.js"></script>
-    <script src="../js/root/profile-system.js"></script>
+    <script src="../js/root/profile-system.js?v=20251217"></script>
     <script src="../js/root/theme-toggle.js"></script>
     <!-- Newsletter is in index folder -->
     <script src="../js/index/newsletter-subscription-footer.js"></script>
 
     <!-- Load find-tutors modular components in correct order -->
-    <script src="../js/find-tutors/api-config-&-util.js"></script>
+    <script src="../js/find-tutors/api-config-&-util.js?v=20251217"></script>
     <script src="../js/find-tutors/helper.js"></script>
-    <script src="../js/find-tutors/global-functions.js"></script>
-    <script src="../js/find-tutors/websocket.js"></script>
+    <script src="../js/find-tutors/global-functions.js?v=20251217"></script>
+    <script src="../js/find-tutors/websocket.js?v=20251217"></script>
     <script src="../js/find-tutors/preference-Management.js"></script>
 
     <!-- Modular UI Components -->
     <script src="../js/find-tutors/sidebar-manager.js"></script>
-    <script src="../js/find-tutors/stats-counter.js"></script>
+    <script src="../js/find-tutors/stats-counter.js?v=20251217"></script>
     <script src="../js/find-tutors/tutor-card-creator.js"></script>
     <script src="../js/find-tutors/pagination-manager.js"></script>
     <script src="../js/find-tutors/UI-management-new.js"></script>
 
-    <script src="../js/find-tutors/main-controller.js"></script>
+    <script src="../js/find-tutors/main-controller.js?v=20251217"></script>
     <script src="../js/find-tutors/init.js"></script>
 
     <!-- Request Modals Manager -->
-    <script src="../js/find-tutors/request-modals.js"></script>
+    <script src="../js/find-tutors/request-modals.js?v=20251217"></script>
 
     <!-- Shared Modal Scripts -->
     <script src="../js/common-modals/coming-soon-modal.js"></script>
