Fix tutor-profile.html: config.js path and add cache-busting versions

--- a/profile-pages/tutor-profile.html
+++ b/profile-pages/tutor-profile.html
@@ -9,7 +9,7 @@
     <meta http-equiv="Expires" content="0">
     <title>ASTEGNI - Tutor Profile</title>
     <!-- TailwindCSS CDN -->
-    <script src="js/config.js"></script>
+    <script src="../js/config.js?v=20251217"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Animate.css for animations -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
@@ -3934,7 +3934,7 @@
     <!-- Scripts -->
     <script src="../js/root/default-avatar.js"></script>
     <script src="../js/root/app.js"></script>
-    <script src="../js/root/auth.js"></script>
+    <script src="../js/root/auth.js?v=20251217"></script>
     <script src="../js/root/theme-toggle.js"></script>
 
     <!-- ============================================ -->
@@ -3969,7 +3969,7 @@
     <script src="../js/page-structure/initializationManager.js"></script>
 
     <!-- Profile System -->
-    <script src="../js/root/profile-system.js?v=20251122"></script>
+    <script src="../js/root/profile-system.js?v=20251217"></script>
 
     <!-- Common Modals -->
     <script src="../js/index/init-modals.js"></script>
@@ -3991,13 +3991,13 @@
     <script src="../js/student-profile/resource-manager.js"></script>
 
     <!-- 2. API Service -->
-    <script src="../js/tutor-profile/api-service.js"></script>
+    <script src="../js/tutor-profile/api-service.js?v=20251217"></script>
 
     <!-- 3. UI Manager -->
     <script src="../js/tutor-profile/ui-manager.js"></script>
 
     <!-- 4. Modal Manager -->
-    <script src="../js/tutor-profile/modal-manager.js"></script>
+    <script src="../js/tutor-profile/modal-manager.js?v=20251217"></script>
 
 
 
@@ -4009,7 +4009,7 @@
     <script src="../js/tutor-profile/profile-controller.js"></script>
 
     <!-- 6.25. Session Request Manager (MUST load before panel-manager.js) -->
-    <script src="../js/tutor-profile/session-request-manager.js"></script>
+    <script src="../js/tutor-profile/session-request-manager.js?v=20251217"></script>
 
     <!-- 6.5. Panel Manager (for sidebar panel switching) -->
     <script src="../js/tutor-profile/panel-manager.js"></script>
@@ -4018,10 +4018,10 @@
     <script src="../modals/tutor-profile/modal-loader.js"></script>
 
     <!-- 7. Global Functions (for HTML onclick handlers) -->
-    <script src="../js/tutor-profile/global-functions.js?v=20251122"></script>
+    <script src="../js/tutor-profile/global-functions.js?v=20251217"></script>
 
     <!-- 7.5 Schedule Tab Manager (3-tab interface for schedule panel) -->
-    <script src="../js/tutor-profile/schedule-tab-manager.js"></script>
+    <script src="../js/tutor-profile/schedule-tab-manager.js?v=20251217"></script>
 
     <!-- 8. Additional Features -->
 
