--- a/profile-pages/student-profile.html
+++ b/profile-pages/student-profile.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASTEGNI - Student Profile</title>
     <!-- TailwindCSS CDN -->
-    <script src="js/config.js"></script>
+    <script src="../js/config.js?v=20251217"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Animate.css for animations -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
@@ -5781,7 +5781,7 @@
     <script src="../js/page-structure/initializationManager.js"></script>
 
     <!-- Authentication Manager (MUST BE LOADED BEFORE PROFILE SCRIPTS) -->
-    <script src="../js/root/auth.js"></script>
+    <script src="../js/root/auth.js?v=20251217"></script>
 
     <!-- Theme Toggle - for theme persistence across pages -->
     <script src="../js/root/theme-toggle.js"></script>
