--- a/profile-pages/user-profile.html
+++ b/profile-pages/user-profile.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASTEGNI - User Profile</title>
     <!-- TailwindCSS CDN -->
-    <script src="js/config.js"></script>
+    <script src="../js/config.js?v=20251217"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Animate.css for animations -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
@@ -2814,7 +2814,7 @@
 
     <!-- Root/Shared Scripts -->
     <script src="../js/root/app.js"></script>
-    <script src="../js/root/auth.js"></script>
+    <script src="../js/root/auth.js?v=20251217"></script>
     <script src="../js/root/theme-toggle.js"></script>
 
     <!-- Common Modals -->
