--- a/view-profiles/view-parent.html
+++ b/view-profiles/view-parent.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASTEGNI - View Parent Profile</title>
     <!-- TailwindCSS CDN -->
-    <script src="js/config.js"></script>
+    <script src="../js/config.js?v=20251217"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Animate.css for animations -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
@@ -1740,7 +1740,7 @@
 
     <!-- Scripts -->
     <script src="../js/root/app.js"></script>
-    <script src="../js/root/auth.js"></script>
+    <script src="../js/root/auth.js?v=20251217"></script>
     <script src="../js/root/profile-system.js"></script>
     <script src="../js/root/theme.js"></script>
     <!-- Common Modal Loader for add-role, logout, coming-soon modals -->
