--- a/view-profiles/view-tutor.html
+++ b/view-profiles/view-tutor.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASTEGNI - View Tutor Profile</title>
     <!-- TailwindCSS CDN -->
-    <script src="js/config.js"></script>
+    <script src="../js/config.js?v=20251217"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Animate.css for animations -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
@@ -2491,7 +2491,7 @@
 
     <!-- Scripts -->
     <script src="../js/root/app.js"></script>
-    <script src="../js/root/auth.js"></script>
+    <script src="../js/root/auth.js?v=20251217"></script>
     <script src="../js/root/profile-system.js"></script>
     <!-- page-structure-manager.js removed - functionality is inline -->
     <!-- <script src="../js/page-structure/weather-manager.js"></script> -->
