Add cache-busting to edit-profile-modal.js

--- a/profile-pages/tutor-profile.html
+++ b/profile-pages/tutor-profile.html
@@ -4099,7 +4099,7 @@
     <script src="../js/tutor-profile/settings-panel-personal-verification.js?v=20251218"></script>
 
     <!-- Edit Profile Modal JavaScript (Grade Levels, Languages, Locations, Courses) -->
-    <script src="../js/tutor-profile/edit-profile-modal.js"></script>
+    <script src="../js/tutor-profile/edit-profile-modal.js?v=20251218"></script>
 
     <!-- Hero Section Typewriter Animation -->
     <script src="../js/tutor-profile/hero-section.js"></script>
