Fix Google OAuth: Add FedCM middleware and remove token expiration bug
- Add FedCM middleware to app.py for Google OAuth CORS support
- Remove duplicate token expiration check causing 'Token has expired' errors
- Add Google OAuth endpoints (google_oauth_endpoints.py)
- Add Google OAuth frontend integration (js/root/google-oauth.js)
- Add test pages (simple-google-test.html, test-google-oauth.html, diagnose-google-oauth.html)
- Add comprehensive documentation (sanitized, no secrets)
- Google Sign-In now fully functional on localhost and production

--- a/index.html
+++ b/index.html
@@ -811,6 +811,7 @@
     <script src="js/root/default-avatar.js"></script>
     <script src="js/root/app.js"></script>
     <script src="js/root/auth.js?v=20251217"></script>
+    <script src="js/root/google-oauth.js"></script>
     <script src="js/root/profile-system.js?v=20251217"></script>
     <script src="js/root/theme-toggle.js"></script>
     <script src="js/root/nav.js"></script>
