--- a/check-backend.html
+++ b/check-backend.html
@@ -79,7 +79,7 @@
     </div>
 
     <script>
-        const API_BASE_URL = 'https://api.astegni.com';
+        const API_BASE_URL = 'http://localhost:8000';
         const resultsDiv = document.getElementById('test-results');
 
         function addTest(title, status, result) {
