Critical fix: Add missing auth.js to parent-profile and advertiser-profile pages
The root cause of the production redirect issue was that parent-profile.html and advertiser-profile.html were missing the auth.js script, so window.AuthManager was undefined. This caused the authentication checks added in the previous commit to fail and redirect users.

Changes:
- Added auth.js script tag to parent-profile.html (before nav.js)
- Added auth.js script tag to advertiser-profile.html (before nav.js)

This ensures AuthManager is available when the auth checks in parent-profile.js and advertiser-profile.js run, preventing the redirect loop issue in production.

--- a/profile-pages/advertiser-profile.html
+++ b/profile-pages/advertiser-profile.html
@@ -3680,6 +3680,8 @@
     <!-- Initialization (Auto-initializes all loaded managers) -->
     <script src="../js/page-structure/initializationManager.js"></script>
 
+    <!-- Authentication Manager - MUST load before profile-specific code -->
+    <script src="../js/root/auth.js?v=20251217"></script>
     <!-- Navigation - mobile menu handler -->
     <script src="../js/root/nav.js"></script>
     <!-- Theme Toggle - for theme persistence across pages -->
