--- a/profile-pages/parent-profile.html
+++ b/profile-pages/parent-profile.html
@@ -5780,6 +5780,8 @@
     <script src="../js/common-modals/communityManager.js"></script>
     <!-- Default Avatar Handler - prevents 404 errors for missing profile pictures -->
     <script src="../js/root/default-avatar.js"></script>
+    <!-- Authentication Manager - MUST load before profile-specific code -->
+    <script src="../js/root/auth.js?v=20251217"></script>
     <!-- Navigation - mobile menu handler -->
     <script src="../js/root/nav.js"></script>
     <!-- Theme Toggle - for theme persistence across pages -->
