Add comprehensive debug logging to track loading screen issue
- Create debug-page-load.js with extensive page load monitoring
- Track DOM changes, visibility, overlays, and manager initialization
- Monitor body element modifications and loading screen elements
- Add debug script to tutor-profile and student-profile pages
- Will help identify what's causing the ASTEGNI loading screen to appear

--- a/profile-pages/student-profile.html
+++ b/profile-pages/student-profile.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASTEGNI - Student Profile</title>
+    <!-- DEBUG SCRIPT - MUST LOAD FIRST -->
+    <script src="../js/debug-page-load.js"></script>
     <!-- TailwindCSS CDN -->
     <script src="../js/config.js?v=20251217"></script>
     <script src="https://cdn.tailwindcss.com"></script>
