--- a/profile-pages/tutor-profile.html
+++ b/profile-pages/tutor-profile.html
@@ -8,6 +8,8 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>ASTEGNI - Tutor Profile</title>
+    <!-- DEBUG SCRIPT - MUST LOAD FIRST -->
+    <script src="../js/debug-page-load.js"></script>
     <!-- TailwindCSS CDN -->
     <script src="../js/config.js?v=20251217"></script>
     <script src="https://cdn.tailwindcss.com"></script>
