--- a/profile-pages/student-profile.html
+++ b/profile-pages/student-profile.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASTEGNI - Student Profile</title>
-    <!-- DEBUG SCRIPT - MUST LOAD FIRST -->
-    <script src="../js/debug-page-load.js"></script>
+    <!-- LOADING SCREEN FIX - MUST LOAD FIRST -->
+    <script src="../js/fix-loading-screen.js"></script>
     <!-- TailwindCSS CDN -->
     <script src="../js/config.js?v=20251217"></script>
     <script src="https://cdn.tailwindcss.com"></script>
