Comment out reviews section on index page

--- a/index.html
+++ b/index.html
@@ -480,6 +480,7 @@
     </section>
 
 <!-- Professional Reviews Section with Dynamic Data -->
+    <!-- COMMENTED OUT - Reviews Section Disabled
     <section id="reviews" class="reviews-section">
         <div class="container mx-auto px-4">
             <h2 class="section-title">Expert Reviews & Recognition</h2>
@@ -495,6 +496,7 @@
             </div>
         </div>
     </section>
+    -->
 
     <!-- Rotating Ad Section - 4 Placeholder Ads -->
     <div class="ad-container premium-ad" style="margin-top: 2rem;">
